psychic power overhaul

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -621,6 +621,11 @@
 }
 .fortyk .psy-name{
     grid-column: span 3;
+    border: 3px solid black;
+    width:100%;
+    height:100%;
+    padding:3px;
+    font-weight: bolder;
 }
 .fortyk .npcskillntraits{
     height:100%;
