--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -30,34 +30,34 @@
                     <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
                     <div class="resource-content flexrow flex-center flex-between">
                         <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
-                       
+
                         <span> / </span>
                         <input type="text" class="combat-resources" data-target="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
-                       
+
                     </div>
                 </div>
                 <div class="resource flex-group-center">
                     <label for="data.secChar.fatigue.value" class="resource-label">Fatigue</label>
                     <div class="resource-content flexrow flex-center flex-between">
                         <input type="text" class="combat-resources" data-target="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
-                       
+
                         <span> / </span>
                         <input type="text" class="combat-resources" data-target="data.secChar.fatigue.max" value="{{data.secChar.fatigue.max}}" data-dtype="Number" disabled/>
-                       
+
                     </div>
                 </div>
                 <div class="resource flex-group-center">
                     <label class="resource-label">Global Modifier</label>
                     <div class="resource-content flexrow flex-center flex-between">
                         <input type="text" class="combat-resources" data-target="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
-                        
+
                     </div>
                 </div>
                 <div class="resource flex-group-center">
                     <label class="resource-label">Fate</label>
                     <div class="resource-content flexrow flex-center flex-between">
                         <input type="text" class="combat-resources" data-target="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
-                        
+
                         <span> / </span>
                         <input type="text" class="combat-resources" data-target="data.secChar.fate.max" value="{{data.secChar.fate.max}}" data-dtype="Number"/>
                     </div>
@@ -117,7 +117,7 @@
                 {{#unless (compareString key "inf")}}
                 <div>
                     <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.value" value="{{char.value}}" data-dtype="Number"/>
-                   
+
 
                 </div>
                 {{/unless}}
@@ -130,7 +130,7 @@
                 {{#unless (compareString key "inf")}}
                 <div>
                     <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.uB" value="{{char.uB}}" data-dtype="Number"/>
-                    
+
                 </div>
                 {{/unless}}
                 {{/each}}
@@ -520,7 +520,7 @@ Stays commented until the parse script works
                     <div class="flexcol">
                         <label>Psy Rating:</label>
                         <input type="text" class="combat-resources" data-target="data.psykana.pr.value" value="{{data.psykana.pr.value}}" data-dtype="Number"/>
-                       
+
                     </div>
                     <div class="flexcol">
                         <label>Sustained Powers:</label>
@@ -532,7 +532,7 @@ Stays commented until the parse script works
                     </div>
                     <div class="flexcol">
                         <label>Class:</label>
-                        
+
                         <select class="psyType-select" name="data.psykana.psykerType.value" data-dtype="String">
                             {{#select data.psykana.psykerType.value}}
                             <option value="bound">Bound</option>
@@ -545,7 +545,7 @@ Stays commented until the parse script works
                     <div class="flexcol">
                         <label>Psy Modifier:</label>
                         <input type="text" class="combat-resources" data-target="data.psykana.mod.value" value="{{data.psykana.mod.value}}" data-dtype="Number"/>
-                       
+
                     </div>
                 </div>
                 {{#if (greaterThan data.psykana.pr.value 0)}}
@@ -559,34 +559,56 @@ Stays commented until the parse script works
 
 
 
-                            <label class="list-item psy-name">Name: {{power.name}}</label>
+                            <a class="list-item psy-name item-descr" data-name="{{this.name}}" data-item-descr="{{this.data.description.value}}">Name: {{this.name}}</a>
+
 
 
 
                             <label class="list-item">Action: {{power.data.action.value}}</label>
 
-
+                            {{#unless (contains ../data.psykana.psykerType.value "navigator")}}
+                            <label class="list-item">Discipline: {{power.data.discipline.value}}</label>
+                            <label class="list-item">Power Type: {{power.data.class.value}}</label>
 
                             <label class="list-item">Subtype: {{power.data.subtype.value}}</label>
+                            <div class="list-item flexrow">
+                                <label>PR: </label>
+                                <input type="text" class="item-text-input" data-target="data.curPR.value" data-item-id="{{power._id}}" value="{{power.data.curPR.value}}" data-dtype="Number">
+                            </div>
 
-                            <label class="list-item">Discipline: {{power.data.discipline.value}}</label>
 
+                            <label class="list-item">Sustain: {{power.data.sustain.value}}</label>
+                            {{else}}
+                            <div class="list-item2">
+                                Training:
+                                <select class="power-training" data-item-id="{{power._id}}"  name="data.training.value">
+                                    {{#select power.data.training.value}}
+                                    {{#each FORTYK.navigatorPowerTraining}}
+                                    <option value="{{this}}">{{this}}</option>
+                                    {{/each}}
+                                </select>
+                            </div>
+
+                            {{/select}}
+                            {{/unless}}
                             <label class="list-item">Test Type: {{power.data.testChar.value}}</label>
+
 
 
                             <label class="list-item">Modifier: {{power.data.testMod.value}}</label>
 
-                            <label class="list-item">Sustain: {{power.data.sustain.value}}</label>
+
 
                             <label class="list-item">Range: {{power.data.range.value}}m</label>
 
-                            <label class="list-item">Damage: <a class="damage-roll button" data-label="{{power.name}}"data-formula="{{power.data.damageFormula.value}}" data-weapon="{{power._id}}">{{power.data.damageFormula.value}}</a></label>
+                            {{#if (contains power.data.class.value "psychic")}}
+
+
 
                             <label class="list-item">Penetration: {{power.data.pen.value}}</label>
 
                             <div class="list-item">
                                 <span>Special: 
-
                                     {{#each this.flags.fortyk as |flag key|}}
 
                                     {{#if this}}
@@ -596,26 +618,29 @@ Stays commented until the parse script works
 
                                         {{label}}{{/with}}{{#if (isnumber this)}}({{this}}){{/if}}</a>
                                     {{/if}}{{/each}}
+
                                 </span>
 
                             </div>
 
                             <label class="list-item">Damage Type: {{power.data.damageType.value}}</label>
 
-                            <label class="list-item">Power Type: {{power.data.class.value}}</label>
-                            <div class="list-item flexrow">
-                                <label>PR: </label>
-                                <input type="text" class="item-text-input" data-target="data.curPR.value" data-item-id="{{power._id}}" value="{{power.data.curPR.value}}" data-dtype="Number">
-                            </div>
-                            <div class="list-item flexrow">
+                            {{/if}}
+
+                            <div class="list-item flexcol">
                                 <label>Test Target: </label>
                                 <span data-item-id="{{power._id}}" class="rollable powerItem button{{#if (greaterThan power.data.curPR.value ../data.psykana.pr.effective)}} power-push{{else}} power-safe{{/if}}" data-roll-type="focuspower" data-target="{{power.data.target.value}}" data-label="{{power.name}}" data-char="{{power.data.testChar.type}}">{{power.data.target.value}}</span>
                             </div>
+                            {{#if (contains power.data.class.value "psychic")}}
+                            <label class="list-item">Damage: <a class="damage-roll button" data-label="{{power.name}}"data-formula="{{power.data.damageFormula.value}}" data-weapon="{{power._id}}">{{power.data.damageFormula.value}}</a></label>
+                            {{else if (contains power.data.class.value "Buff/Debuff")}}
+                            <label class="list-item"><a class="buff-debuff button" data-label="{{power.name}}"data-power="{{power._id}}">Apply Buff/Debuff</a></label>
+                            {{/if}}
                             <div class="list-item flexrow">
+                                
                                 <a class="item-edit" title="Edit Power" data-item-id="{{power._id}}"></a>
                                 <a class="item-delete" title="Delete Power" data-item-id="{{power._id}}"></a>
                             </div>
-                            <a class="item-descr list-item" data-name="{{power.name}}" data-item-descr="{{power.data.description.value}}">Description</a>
                         </div>
 
 
