psy bug/armor bug

--- a/templates/item/item-psychicPower-sheet.html
+++ b/templates/item/item-psychicPower-sheet.html
@@ -76,7 +76,7 @@
         </div>
         <div class="flexcol">
 
-            <a class="weapon-special button">Special</a>
+            <a class="special button">Special</a>
 
 
         </div>
