--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -420,13 +420,13 @@
                             <div class="flexcol">
                                 <span class="section-title">COVER</span>
                                 <span class="cover-reset button">Reset Cover</span>
-                                <input type="text" class="combat-resources" title="cover" name="data.secChar.cover.value" value="{{data.secChar.cover.value}}" data-dtype="Number"/>
+                                <input type="text" class="combat-resources" title="cover" data-target="data.secChar.cover.value" value="{{data.secChar.cover.value}}" data-dtype="Number"/>
                                 <div class="flexrow flex-group-center">
                                     <div class="armor flexcol flex-group-center">
 
                                         <span>Head</span>
                                         <span>(1-10)</span>
-                                        <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.head.cover" {{checked data.characterHitLocations.head.cover}}>
+                                        <input type="checkbox"  title="cover" name="data.characterHitLocations.head.cover" {{checked data.characterHitLocations.head.cover}}>
                                         <span title="Armor">{{data.characterHitLocations.head.armor}}</span>
                                         <span title="Total Soak">{{data.characterHitLocations.head.value}}</span>
                                     </div>
@@ -437,7 +437,7 @@
 
                                         <span>Left Arm</span>
                                         <span>(21-30)</span>
-                                        <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.lArm.cover" {{checked data.characterHitLocations.lArm.cover}}>
+                                        <input type="checkbox"  title="cover" name="data.characterHitLocations.lArm.cover" {{checked data.characterHitLocations.lArm.cover}}>
                                         <span title="Armor">{{data.characterHitLocations.lArm.armor}}</span>
                                         <span title="Total Soak">{{data.characterHitLocations.lArm.value}}</span>
                                     </div>
@@ -445,7 +445,7 @@
 
                                         <span>Body</span>
                                         <span>(31-70)</span>
-                                        <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.body.cover" {{checked data.characterHitLocations.body.cover}}>
+                                        <input type="checkbox"  title="cover" name="data.characterHitLocations.body.cover" {{checked data.characterHitLocations.body.cover}}>
                                         <span title="Armor">{{data.characterHitLocations.body.armor}}</span>
                                         <span title="Total Soak">{{data.characterHitLocations.body.value}}</span>
                                     </div>
@@ -453,7 +453,7 @@
 
                                         <span>Right Arm</span>
                                         <span>(11-20)</span>
-                                        <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.rArm.cover" {{checked data.characterHitLocations.rArm.cover}}> 
+                                        <input type="checkbox"  title="cover" name="data.characterHitLocations.rArm.cover" {{checked data.characterHitLocations.rArm.cover}}> 
                                         <span title="Armor">{{data.characterHitLocations.rArm.armor}}</span>
                                         <span title="Total Soak">{{data.characterHitLocations.rArm.value}}</span>
                                     </div>
@@ -464,7 +464,7 @@
 
                                         <span>Left Leg</span>
                                         <span>(71-85)</span>
-                                        <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.lLeg.cover" {{checked data.characterHitLocations.lLeg.cover}}>
+                                        <input type="checkbox"  title="cover" name="data.characterHitLocations.lLeg.cover" {{checked data.characterHitLocations.lLeg.cover}}>
                                         <span title="Armor" >{{data.characterHitLocations.lLeg.armor}}</span>
                                         <span title="Total Soak">{{data.characterHitLocations.lLeg.value}}</span>
                                     </div>
@@ -472,7 +472,7 @@
 
                                         <span>Right Leg</span>
                                         <span>(86-100)</span>
-                                        <input type="checkbox" class="combat-resources" title="cover" name="data.characterHitLocations.rLeg.cover" {{checked data.characterHitLocations.rLeg.cover}}>
+                                        <input type="checkbox"  title="cover" name="data.characterHitLocations.rLeg.cover" {{checked data.characterHitLocations.rLeg.cover}}>
                                         <span title="Armor" >{{data.characterHitLocations.rLeg.armor}}</span>
                                         <span title="Total Soak">{{data.characterHitLocations.rLeg.value}}</span>
                                     </div>
