--- a/templates/actor/dialogs/melee-attack-dialog.html
+++ b/templates/actor/dialogs/melee-attack-dialog.html
@@ -168,4 +168,4 @@
 
 </div>
 <label>Other Modifiers</label>
-<input type="text" id="modifier" name="other" value="0">
+<input type="text" id="modifier" name="other" value="{{modifiers.testMod}}">
