--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -285,7 +285,7 @@
                 {{/if}}
 
                 {{#unless (contains this.data.data.class.value "thrown")}}
-                <div class="list-item">
+                <div class="list-item ammo-list">
 
                     <label>Remaining Ammo:</label>
                     <select class="weapon-ammo" data-weapon="{{this._id}}" data-previous="{{this.data.data.ammo._id}}">
