--- a/templates/item/item-ammunition-sheet.html
+++ b/templates/item/item-ammunition-sheet.html
@@ -48,7 +48,7 @@
             <input type="text" value="{{data.pen.formula}}" name="data.pen.formula">
         </div>
         <div class="flexcol">
-            <a class="weapon-special button">Special</a>
+            <a class="special button">Special</a>
         </div>
          <div class="flexcol">
             <label>Damage Type:</label>
