fix spaceship sheet

--- a/templates/actor/spaceship-sheet.html
+++ b/templates/actor/spaceship-sheet.html
@@ -82,28 +82,28 @@
                 <div class="resource flex-group-center">
                     <label for="data.secChar.wounds.value" class="resource-label">Hull Integrity</label>
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" class="combat-resources" name="data.hullIntegrity.value" value="{{data.hullIntegrity.value}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.hullIntegrity.value" value="{{data.hullIntegrity.value}}" data-dtype="Number"/>
                         <span> / </span>
-                        <input type="text" class="combat-resources" name="data.hullIntegrity.max" value="{{data.hullIntegrity.max}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.hullIntegrity.max" value="{{data.hullIntegrity.max}}" data-dtype="Number"/>
                     </div>
                 </div>
 
                 <div class="resource flex-group-center">
                     <label for="data.secChar.fatigue.value" class="resource-label">Crew</label>
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" class="combat-resources" name="data.crew.value" value="{{data.crew.value}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.crew.value" value="{{data.crew.value}}" data-dtype="Number"/>
                         <span> / </span>
-                        <input type="text" class="combat-resources" name="data.crew.max" value="{{data.crew.max}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.crew.max" value="{{data.crew.max}}" data-dtype="Number"/>
                         
                     </div>
-                    <input type="text" class="combat-resources" name="data.crew.capacity" value="{{data.crew.capacity}}" placeholder="Crew capacity" data-dtype="Number"/>
+                    <input type="text" class="combat-resources" data-target="data.crew.capacity" value="{{data.crew.capacity}}" placeholder="Crew capacity" data-dtype="Number"/>
                 </div>
                 <div class="resource flex-group-center">
                     <label for="data.secChar.fatigue.value" class="resource-label">Morale</label>
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" class="combat-resources" name="data.morale.value" value="{{data.morale.value}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.morale.value" value="{{data.morale.value}}" data-dtype="Number"/>
                         <span> / </span>
-                        <input type="text" class="combat-resources" name="data.morale.max" value="{{data.morale.max}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.morale.max" value="{{data.morale.max}}" data-dtype="Number"/>
                     </div>
                 </div>
             </div>
