--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -723,5 +723,37 @@
 }
 .tntselect{
     width:100%;
+    height:530px;
+    overflow: auto;
+}
+.tntitem{
+    border: 1px solid #999;
+    width:100%;
+    height:100%;
+    padding:3px;
+}
+.tntheaderitem{
+    border: 3px solid #999;
+    width:100%;
+    height:100%;
+    padding:3px;
+}
+.tntcheckbox{
+   grid-column-start:span 1; 
+}
+.tntname{
+    grid-column-start:span 3;
+}
+.tnttier{
+    grid-column-start:span 1; 
+}
+.tntaptitudes{
+    grid-column-start:span 2;
+}
+.tntdescr{
+    grid-column-start:span 1; 
+}
+.tntdialog .window-content{
+    overflow:inherit;
 }
 [hidden] { display: none !important; }
