moved the damage roll function gm side

--- a/templates/actor/actor-main.html
+++ b/templates/actor/actor-main.html
@@ -81,6 +81,12 @@
             <input type="text" class="combat-resources" data-target="data.eliteAdvances.value" value="{{data.eliteAdvances.value}}" data-dtype="Number"/>
 
         </div>
+        <div class="eliteAdvances flexcol">
+
+            <span class="descrSpan">Honours:</span>
+            <input type="text" class="combat-resources" data-target="data.honours.value" value="{{data.honours.value}}" data-dtype="Number"/>
+
+        </div>
         <div class="resources flexrow">
 
             <div class="flex-group-center">
