--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -96,7 +96,7 @@
         </div>
     </div>
     <label class="section-title">ADVANCEMENTS</label>
-    <a class="item-create button" data-type="advancement" title="Add a new Advancement">Add Advancement</a>
+    <a class="spend-exp button" data-type="advancement" title="Add a new Advancement">Add Advancement</a>
     <div class="list list4col grid grid-4col">
         <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="advancements">Name</a>
         <a class="list-item sort-button" data-sort-type="cost" data-path="data.cost.value" data-item-type="advancements">Cost</a>
