talents and newskill
implemented talent purchase and new skill purchase in the spend exp dialog. left to do: implement reversal operations when an advance is deleted.

--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -7,7 +7,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
@@ -16,7 +16,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
@@ -25,7 +25,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
@@ -34,7 +34,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
@@ -43,7 +43,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
@@ -52,7 +52,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
@@ -61,7 +61,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
@@ -70,7 +70,7 @@
             <option value="">None</option>
             {{#each aptitudes as |apt|}}
 
-            <option value="{{apt}}">{{apt}}</option>
+            <option value="{{apt.key}}">{{apt.label}}</option>
             {{/each}}
             {{/select}}
         </select>
