--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -36,6 +36,8 @@
     display: grid;
     grid-column: span 2 / span 2;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-rows: max-content;
+    grid-auto-rows: max-content;
     grid-gap: 0px;
     margin: 10px 0;
     padding: 0;
