--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -8,7 +8,7 @@
         <nav class="sheet-tabs tabs grid grid-3col" data-group="primary">
             
             <a class="item" data-tab="main">MAIN</a>
-            <a class="item" data-tab="skills">SKILLS</a>
+            <a class="item skills" data-tab="skills">SKILLS</a>
             <a class="item" data-tab="tnt">TALENTS & TRAITS</a>
             <a class="item" data-tab="gear">GEAR & CYBERNETICS</a>
             <a class="item" data-tab="exp">EXP & MISSIONS</a>
@@ -34,7 +34,7 @@
             {{> "systems/fortyk/templates/actor/actor-main.html"}}
         </div>
 
-        <div class="tab skills" data-group="primary" data-tab="skills">
+        <div class="tab skills"  data-group="primary" data-tab="skills">
             {{> "systems/fortyk/templates/actor/actor-skills.html"}}
         </div>
         <div class="tab tnt" data-group="primary" data-tab="tnt">
