--- a/templates/actor/dialogs/spendExp-dialog-parts/characteristic.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/characteristic.html
@@ -1,3 +1,4 @@
+<div class="flexcol">
 <span>Characteristic</span>
 <select class="charChoice">
         <option hidden>Choose Characteristic</option>
@@ -8,7 +9,9 @@
         {{/each}}
         
     </select>
-<div class="flexrow">
+</div>
+
+<div class="flexcol">
     <span>Discount:</span>
     <input id="discount" class="discount" type="text"  value="0">
 </div>
