--- a/templates/actor/dialogs/spendExp-dialog-parts/skill.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/skill.html
@@ -1,3 +1,4 @@
+<div class="flexcol">
 <span>Skill</span>
 <select class="skillChoice">
         <option hidden>Choose Skill</option>
@@ -6,7 +7,9 @@
         {{/each}}
         
     </select>
-<div class="flexrow">
+</div>
+
+<div class="flexcol">
     <span>Discount:</span>
     <input id="discount" class="discount" type="text"  value="0">
 </div>
