--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -761,4 +761,9 @@
 .tntdialog .window-content{
     overflow:inherit;
 }
+.cost-span{
+    font-weight: bold;
+    border: inset;
+    padding-left: 5px;
+}
 [hidden] { display: none !important; }
