--- a/templates/actor/dialogs/spendExp-dialog-parts/custom.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/custom.html
@@ -1,8 +1,8 @@
-<div class="flexrow">
+<div class="flexcol">
     <span>Custom Name:</span>
     <input id="custom-name" type="text"  value="">
 </div>
-<div class="flexrow">
+<div class="flexcol">
     <span>Custom Cost:</span>
     <input class="custom-cost" type="text"  value="{{cost}}">
 </div>
