--- a/templates/actor/dialogs/spendExp-dialog-parts/newSkill.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/newSkill.html
@@ -77,7 +77,7 @@
     <textarea id="description" rows="5" cols="50">
     </textarea>
 </div>
-<div class="flexrow">
+<div class="flexcol">
     <span>Discount:</span>
     <input id="discount" class="discount" type="text"  value="0">
 </div>
