--- a/templates/actor/dialogs/spendExp-dialog-parts/talent.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/talent.html
@@ -23,7 +23,7 @@
         {{/each}}
     </div>
 </div>
-<div class="flexrow">
+<div class="flexcol">
     <span>Discount:</span>
     <input id="discount" class="discount" type="text"  value="0">
 </div>
