--- a/templates/actor/dialogs/spendExp-dialog.html
+++ b/templates/actor/dialogs/spendExp-dialog.html
@@ -22,10 +22,10 @@
     {{#if (compareString mode "Talent")}}
     {{> "systems/fortyk/templates/actor/dialogs/spendExp-dialog-parts/talent.html"}}
     {{/if}}
-    <div class="flexcol">
-        <span >Cost: </span>
-        <span class="cost-span" id="cost">{{cost}} EXP</span>
+    <div class="grid grid-3col">
+        <span class="cost-header">Cost: </span><span class="cost-header">Character Exp: </span><span class="cost-header">Remaining Exp: </span>
+        <span class="cost-span" id="cost">{{cost}} EXP</span><span class="cost-span" id="actorExp">{{actorExp}} EXP</span><span class="cost-span" id="remainingExp">{{remainingExp}} EXP</span>
     </div>
     
-    <a class="submit button" data-type="advancement" title="Add a new Advancement">Add Advancement</a>
+    <button class="submit button" id="submitButton" data-type="advancement" title="Add a new Advancement">Add Advancement</button>
 </form>
