fixed updating display of upgrades

--- a/templates/actor/dialogs/spendExp-dialog.html
+++ b/templates/actor/dialogs/spendExp-dialog.html
@@ -23,7 +23,7 @@
     {{> "systems/fortyk/templates/actor/dialogs/spendExp-dialog-parts/talent.html"}}
     {{/if}}
     <div class="grid grid-3col">
-        <span class="cost-header">Cost: </span><span class="cost-header">Character Exp: </span><span class="cost-header">Remaining Exp: </span>
+        <span class="cost-header">Cost </span><span class="cost-header">Character Exp </span><span class="cost-header">Remaining Exp </span>
         <span class="cost-span" id="cost">{{cost}} EXP</span><span class="cost-span" id="actorExp">{{actorExp}} EXP</span><span class="cost-span" id="remainingExp">{{remainingExp}} EXP</span>
     </div>
     
