--- a/templates/actor/actorDH-sheet.html
+++ b/templates/actor/actorDH-sheet.html
@@ -8,7 +8,7 @@
         <nav class="sheet-tabs tabs grid grid-3col" data-group="primary">
             
             <a class="item" data-tab="main">MAIN</a>
-            <a class="item" data-tab="skills">SKILLS</a>
+            <a class="item skillTab" data-tab="skills">SKILLS</a>
             <a class="item" data-tab="tnt">TALENTS & TRAITS</a>
             <a class="item" data-tab="gear">GEAR & CYBERNETICS</a>
             <a class="item" data-tab="exp">EXP & MISSIONS</a>
